# reflaxe.rust

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  extraParams.hxml  haxelib.json  package-lock.json  package.json  prd.md  release-manifest.json  release.config.js  rust-toolchain-policy.json  rust-toolchain.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.cargo/: config.toml
.github/workflows/: ci.yml  codeql.yml  release-repair.yml  release.yml  rustsec.yml  weekly-ci-evidence.yml
docs/: abstracts-and-casts.md  architecture-capability-manifest.json  architecture-capability.md  array.md  async-await.md  async-contract.md  concurrency-posture.md  consumer-runtime-benchmark-corpus.md  cross-overrides-and-hardening.md  defines-reference.md  dev-watcher.md  diagnostic-contract.json  diagnostic-identifiers.md  dynamic-boundaries.md  examples-matrix.md  extern-lifetime-island-cookbook.md  faq.md  feature-support-matrix.md  function-values.md  ga-caveat-classification.md  ga-decision-record.md  generated-consumer-contract.json  generated-consumer-contract.md  generics.md  haxe-rust-tests.md  haxelib-packaging.md  hxref-lifecycle.md  index.md  install-via-lix.md  interop.md  json-boundary-contract.md  json-boundary-next-slice-audit.md  lambda.md  lifetime-encoding.md  metal-capability-fixtures.md  metal-haxified-rust-roadmap.md  metal-profile.md  metal-systems-facades-roadmap.md  metal-trait-impl-bound-model.md  metal-type-surface-gap-matrix.md  (+51 more)
docs/schemas/: contract-report-v6.schema.json  metal-report-v1.schema.json  optimizer-plan-v2.schema.json  runtime-plan-v4.schema.json
docs/spikes/: auto-profile-exploration.md  family-portable-metal-alignment.md  hxrt-cell-single-thread-fast-mode.md  reflaxe-std-cross-repo-handoff.md
examples/: AGENTS.md
examples/.cargo/: config.toml
examples/async_retry_pipeline/: Main.hx  README.md  compile.ci.hxml  compile.hxml
examples/bytes_ops/: BytesTests.hx  Harness.hx  Main.hx  compile.ci.hxml  compile.hxml  compile.rusty.ci.hxml  compile.rusty.hxml
examples/chat_loopback/: ChatTests.hx  Harness.hx  Main.hx  README.md  compile.ci.hxml  compile.hxml  compile.idiomatic.ci.hxml  compile.idiomatic.hxml  compile.metal.ci.hxml  compile.metal.hxml  compile.portable.ci.hxml  compile.portable.hxml  compile.rusty.ci.hxml  compile.rusty.hxml
family/: family_std_pin.json
haxe_libraries/: reflaxe.hxml  reflaxe.rust.hxml
scripts/: install-git-hooks.sh
src/: ArrayTools.hx  Date.cross.hx  Lambda.cross.hx  StringBuf.cross.hx  StringTools.cross.hx  Sys.cross.hx  SysTypes.cross.hx  haxe  hxrt  rust  sys
std/: AGENTS.md  ArrayTools.hx  Date.hx  Lambda.cross.hx  Lambda.hx  StringBuf.hx  StringTools.cross.hx  StringTools.hx  Sys.cross.hx  Sys.hx  SysTypes.cross.hx
test/: README.md  portable_allowlist.json  portable_conformance_tier1.json  run-semantic-diff.py  run-snapshots.sh  run-tier1-api-surface-smoke.py  run-upstream-stdlib-sweep.sh  tier1_api_surface_probes.json  upstream_std_modules.txt  upstream_std_modules_tier2.txt  upstream_std_modules_tier2_extras.txt
test/snapshot/profile_differentiation/intended_idiomatic/hxrt/: Cargo.toml
test/snapshot/string_null_print_concat/intended/hxrt/: Cargo.toml
test/snapshot/string_null_print_concat/intended/hxrt/src/: io.rs
test/snapshot/sys_http_smoke/intended/hxrt/: Cargo.toml
test/snapshot/sys_http_smoke/intended/hxrt/src/: array.rs  cell.rs  fs.rs  lib.rs  process.rs
tools/: family_std_sync.py
(+1974 files in other folders)
