[package]
name = "hxrt"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["core", "io", "fs", "process", "thread", "date", "json", "db", "ssl", "net", "async"]
core = ["io", "dep:serde"]
io = []
fs = []
process = ["fs"]
thread = []
date = ["dep:chrono"]
json = ["dep:serde_json"]
db = []
ssl = [
  "io",
  "dep:rustls",
  "dep:rustls-native-certs",
  "dep:rustls-pemfile",
  "dep:webpki-roots",
  "dep:ring",
  "dep:pem-rfc7468",
  "dep:md-5",
  "dep:ripemd",
  "dep:sha1",
  "dep:sha2",
  "dep:x509-parser",
  "dep:oid-registry",
]
net = ["io", "ssl", "dep:mio", "dep:socket2", "dep:hostname", "dep:dns-lookup"]
async = ["dep:pollster", "dep:futures-timer"]

[dependencies]
chrono = { version = "0.4", default-features = true, optional = true }
mio = { version = "0.8", features = ["os-poll", "net"], optional = true }
socket2 = { version = "0.5", optional = true }
hostname = { version = "0.4", optional = true }
dns-lookup = { version = "2", optional = true }
parking_lot = "0.12"
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }
ring = { version = "0.17", optional = true }
pem-rfc7468 = { version = "0.7", features = ["std"], optional = true }

# `haxe.Json`
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

# async preview runtime bridge
pollster = { version = "0.4", optional = true }
futures-timer = { version = "3", optional = true }

# `sys.ssl.Digest`
md-5 = { version = "0.10", optional = true }
ripemd = { version = "0.1", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }

# `sys.ssl.Certificate` parsing helpers.
x509-parser = { version = "0.16", optional = true }
oid-registry = { version = "0.7", optional = true }

[dev-dependencies]
rcgen = "0.13"
